--- a/Content/Topics/Release Notes/Assortment Planning.htm
+++ b/Content/Topics/Release Notes/Assortment Planning.htm
@@ -4,5 +4,15 @@
     </head>
     <body>
         <h1>Assortment Planning</h1>
+        <h2>Extended multiple currency planning</h2>
+        <p>TG JE Assortment Planning v2024.1 separated out AUT into <span class="Emphasis">Home AUT</span> and <span class="Emphasis">Blended AUT</span> as part of an effort to better support planning in multiple currencies. TG JE v2024.2 extends this functionality, the <span class="Emphasis">Blended AUT</span> metric has been added to the:</p>
+        <ul>
+            <li>
+                <p> <span class="Emphasis">Historical</span> section on the <span class="Emphasis">Hindsight Management</span> screen.</p>
+            </li>
+            <li>
+                <p><span class="Emphasis">Image view</span> (<span class="Emphasis">View Options</span> &gt; <span class="Emphasis">Quick Text</span> drop-down menu).</p>
+            </li>
+        </ul>
     </body>
 </html>
