--- a/Content/Topics/Users/Content Manager User Rights.htm
+++ b/Content/Topics/Users/Content Manager User Rights.htm
@@ -4,7 +4,7 @@
         <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
-        <h1>Content Manager user rights</h1>
+        <h1>Content Manager </h1>
         <p> Content Manager user rights provide the ability to grant permissions to update text and images for products and product groups at the Master and Event levels. If content is updated for a product at any level, it can be pushed to other levels for the same product or where the product is included in a grouping of products. </p>
         <p MadCap:conditions="General.ScreenOnly">For more information regarding individual functionality, see <MadCap:xref href="../Content Manager/Content Manager Overview.htm">Content Manager overview</MadCap:xref>.</p>
         <p>From the <span class="Emphasis">Maintenance</span> tab, click <span class="Emphasis">Users</span>. Select a user and then an option in the left pane. This displays the <span class="Emphasis">User Information</span> window in which permissions are configured.</p>
