--- a/Content/Topics/Users/Curves.htm
+++ b/Content/Topics/Users/Curves.htm
@@ -3,7 +3,7 @@
     <head><title></title>
     </head>
     <body>
-        <h1>Curves User Rights</h1>
+        <h1>Curves </h1>
         <ul>
             <li>
                 <p>Access To Curve Manager</p>
