--- a/Content/Topics/Users/Customer Manager.htm
+++ b/Content/Topics/Users/Customer Manager.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Customer Manager</h1>
-        <p>The Customer Manager module located within the Management tab is used to access the relevant reporting metrics for the Customer entity. The following User Rights are available:</p>
+        <p>The Customer Manager module located within the Management tab is used to access the relevant reporting metrics for the Customer entity. The following user rights are available:</p>
         <ul>
             <li>
                 <p>Allow Access To Customer Manager</p>
