--- a/Content/Topics/Users/Financial Planning.htm
+++ b/Content/Topics/Users/Financial Planning.htm
@@ -4,8 +4,8 @@
         <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
-        <h1>Merchandise Financial Planning User Rights</h1>
-        <p>For more information regarding individual functionality, <MadCap:conditionalText MadCap:conditions="General.ScreenOnly">see <MadCap:xref href="../Merchandise Financial Planning/The Financial Plan Maintenance Window.htm">The Financial Plan Maintenance window</MadCap:xref>.</MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="General.PrintOnly"> refer to the Merchandise Financial Planning User Guide.</MadCap:conditionalText></p>
+        <h1>Merchandise Financial Planning user rights</h1>
+        <p>For information regarding individual functionality, <MadCap:conditionalText MadCap:conditions="General.ScreenOnly">see <MadCap:xref href="../Merchandise Financial Planning/Merchandise Financial Planning Overview.htm">Merchandise Financial Planning Overview</MadCap:xref>.</MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="General.PrintOnly"> refer to the Merchandise Financial Planning User Guide.</MadCap:conditionalText></p>
         <table class="TableStyle-standard" cellspacing="0" style="mc-table-style: url('../../Resources/TableStyles/standard.css');">
             <col class="TableStyle-standard-Column-Column1" />
             <col class="TableStyle-standard-Column-Column2" />
@@ -20,7 +20,7 @@
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
 						Access To Financial Planning 
 					</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The Financial Planning module.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The Merchandise Financial Planning module.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">
