--- a/Content/Topics/Users/Modify Promotion Status.htm
+++ b/Content/Topics/Users/Modify Promotion Status.htm
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head><title></title>
     </head>
     <body>
         <h1>Modify promotion status</h1>
-        <p>The <span class="Emphasis">Modify promotion status</span> user right provides access to the <span class="Emphasis">Change Status</span> button . Use this button to progress Promotions to the next Workflow Status and to provide additional information to the next set of people working on them.</p>
-        <p class="BasicNote">The Promotion must be in a calculated state before the system will allow modification to the Promotion Status.</p>
+        <p>The <span class="Emphasis">Modify promotion status</span> user right provides access to the <span class="Emphasis">Change Status</span> button used to progress Promotions to the next Workflow Status and to provide additional information to the next set of people working on them.</p>
+        <p class="BasicNote">Promotions must be in a calculated state before modifications to the status are allowed.</p>
         <p class="BasicNote">This permission may be configured to be enabled or disabled during specific Promotion Workflow Status’ States</p>
         <h2>Promotion Management with the user right</h2>
         <p>
