--- a/Content/Topics/Users/Allow Editing Of Campaign.htm
+++ b/Content/Topics/Users/Allow Editing Of Campaign.htm
@@ -4,8 +4,8 @@
     </head>
     <body>
         <h1>Allow Editing Of Campaign</h1>
-        <p>Provides access to view and edit Campaign information including name, effective dates, description, tags and budget.</p>
-        <p class="BasicNote">Without this permission, Campaign information cannot be viewed</p>
+        <p>Provides access to view and edit campaign information including name, effective dates, description, tags and budget.</p>
+        <p class="BasicNote">Without this permission, campaign information cannot be viewed</p>
         <h2>Events Management with the user right</h2>
         <p>
             <img src="../../Resources/Images/Users/Allow Editing Of Campaign.png" class="LargeImages" />
