--- a/Content/Topics/Users/Allow Editing Of Content_1.htm
+++ b/Content/Topics/Users/Allow Editing Of Content_1.htm
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head><title></title>
     </head>
     <body>
         <h1>Allow Editing Of Content</h1>
-        <p>Provides access to edit copy and images associated with Event Content Versions. Depending on the User Rights granted within Content Manager, users may also have access to update other Event, Promotion and Master level Content Versions for the products.</p>
+        <p>Provides access to edit copy and images associated with Event Content Versions. Depending on the rights granted within Content Manager, users may also have access to update other Event, Promotion and Master level Content Versions for the products.</p>
         <p class="BasicNote">This permission can be configured to be enabled or disabled during specific Event Workflow Status’ States</p>
         <p class="BasicNote">This permission is applicable to both the <span class="Emphasis">List</span> and <span class="Emphasis">Layout</span> views.</p>
         <h2>Events Management with the user right</h2>
