--- a/Content/Topics/Users/Allow Modify Event Status.htm
+++ b/Content/Topics/Users/Allow Modify Event Status.htm
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head><title></title>
     </head>
@@ -6,15 +6,12 @@
         <h1>Allow Modify Event Status</h1>
         <p>Provides access to advance the Event’s Workflow Status.</p>
         <p class="BasicNote">This permission may be configured to be enabled or disabled during specific Event Workflow Status’ States</p>
-        <p class="BasicNote">Modifying the Event Status may modify your access depending on the Event Workflow Status State Blacklist configuration</p>
-        <p class="BasicNote">The User Right “Allow Editing of Slot Set Header” must also be granted</p>
-        <h2>Events Management Solution with the user right</h2>
+        <p class="BasicNote">Modifying the Event Status may modify access depending on the Event Workflow Status State Blacklist configuration</p>
+        <p class="BasicNote">The User Right <span class="Emphasis">Allow Editing of Slot Set Header</span> must also be granted</p>
+        <h2>Events Management with the user right</h2>
         <p>
             <img src="../../Resources/Images/Users/Allow Modify Event Status.png" class="LargeImages" />
         </p>
-        <h2>Events Management Solution without the user right</h2>
-        <p>
-            <img src="../../Resources/Images/Users/Allow Modify Event Status_1.png" class="LargeImages" />
-        </p>
+        <p>The <span class="Emphasis">Change Status</span> button does not display without this user right.</p>
     </body>
 </html>
