--- a/Content/Topics/Users/Broker Dispatch Viewer.htm
+++ b/Content/Topics/Users/Broker Dispatch Viewer.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Broker Dispatch Viewer</h1>
-        <p>Broker Dispatch (System Utilities) is an administrative tool for system debugging. User Right <span class="Emphasis">Access To Broker Dispatch Viewer</span> is required.</p>
+        <p>Broker Dispatch (System Utilities) is an administrative tool for system debugging. User right <span class="Emphasis">Access To Broker Dispatch Viewer</span> is required.</p>
         <p>For more information regarding individual functionality, see <MadCap:xref href="../Broker Dispatch/Broker Dispatch Overview.htm">Broker dispatch viewer</MadCap:xref>.</p>
     </body>
 </html>
