--- a/Content/Topics/Users/Config Allow Creation of Event Type.htm
+++ b/Content/Topics/Users/Config Allow Creation of Event Type.htm
@@ -5,10 +5,10 @@
     <body>
         <h1>Config - Allow Creation Of Event Type</h1>
         <p>Provides the ability to specify an Event Type of default attributes (e.g. Geography Set, Slot Set Templates, Cost Types and their default amounts, labels, etc.) that can be grouped and applied to new Events created using the Event Type. Some of these default attributes can then be customized at the Event level.</p>
-        <p>Without this right, the <span class="Emphasis">New</span> button does not display.</p>
-        <p class="BasicNote">This User Right should only be granted to trusted Super Users</p>
+        <p class="BasicNote">This right should only be granted to trusted Super Users</p>
         <p>
             <img src="../../Resources/Images/Users/Config Allow Creation of Event Type.png" class="LargeImages" />
         </p>
+        <p>Without this right, the <span class="Emphasis">New</span> button does not display.</p>
     </body>
 </html>
