--- a/Content/Topics/Users/Supply Chain.htm
+++ b/Content/Topics/Users/Supply Chain.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Supply Chain</h1>
-        <p>The Supply Chain module is used to define supply chains providing inventory to distribution centers (DCs) and stores. The following User Rights are available:</p>
+        <p>The Supply Chain module is used to define supply chains providing inventory to distribution centers (DCs) and stores. The following user rights are available:</p>
         <ul>
             <li>
                 <p>Allow Access to the Supply Chain Manager</p>
