Diamond chart update

--- a/Content/DM Glossary.htm
+++ b/Content/DM Glossary.htm
@@ -18,7 +18,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1"> Allocations</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                    The Allocations solution contains a clear workflow to produce execution orders for the transfer of merchandise throughout supply chains at a level above Item Master defined as variant. Allocation pushes out inventory to the optimal retail store or sales channel. 
+                    The Allocations solution contains a clear work flow to produce execution orders for the transfer of merchandise throughout supply chains at a level above Item Master defined as variant. Allocation pushes out inventory to the optimal retail store or sales channel. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -66,8 +66,13 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Average Units per Transaction (AUT)</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                         The primary Key Performance Indicator (KPI) that measures the average number of units purchased in a typical transaction value. The AUT is used as a lever to increase or decrease sales and margin. The AUT is typically combined with the Average Transaction Value (AVT), foot traffic counts, and/or conversion to determine the change in unit profitability caused by a change in strategy. 
-                        <p>AUT = Unit Sales / Number of Transactions</p></td>
+                        <p>
+                         The primary Key Performance Indicator (KPI) that measures the average number of units purchased in a typical transaction value. The AUT is used as a lever to increase or decrease sales and margin. The AUT is typically combined with the Average Transaction Value (AVT), foot traffic counts, and/or conversion to determine the change in unit profitability caused by a change in strategy. </p>
+                        <p><span class="Emphasis">Home AUT</span>: The average unit ticket price for the placeholder or collection in the Home Site currency. Displays the weighted average of AUT values for all future periods beneath. <span class="Emphasis">Home AUT</span> is assumed to be inclusive of the Home Site’s VAT and is treated as such for all dependent calculations.
+</p>
+                        <p><span class="Emphasis">Blended AUT</span>: The average unit ticket price for the placeholder or collection, accounting for all price conversions across different currencies and countries within the cluster. Displays the weighted average of <span class="Emphasis">Blended AUT</span> values for all periods, both actualized and future, beneath.                      </p>
+                        <p>AUT = Unit Sales / Number of Transactions</p>
+                    </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Average Weeks on Hand (WOH) Store</td>
@@ -315,7 +320,7 @@ Last Week Sales Revenue allows allocators and demand planners to review sales pe
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Layout</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">A saved grid configuration within a view (saving which fields are shown/hidden) and in which order they are displayed. </td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">A saved grid configuration within a view (saving which fields are shown or hidden) and in which order they are displayed. </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Leftover (Stock)</td>
